--- a/client/src/app/core/login/login.component.html
+++ b/client/src/app/core/login/login.component.html
@@ -45,37 +45,24 @@
             <div class="row">
               <div class="col-md-9 col-lg-8 mx-auto pl-5 pr-5">
                 <h3 class="login-heading mb-4">Welcome back!</h3>
-                <form [formGroup]="loginForm" (ngSubmit)="onSubmit(loginForm.value)">
-                  <div class="form-label-group">
-                    <input type="text" id="inputUid" class="form-control" placeholder="Username">
-                    <label for="inputUid">Username</label>
+                <form [formGroup]="signUpForm" (ngSubmit)="onSubmit(signUpForm.value)">
+                  <div class="form-label-group form-group">
+                    <input type="email" id="inputUid" formControlName="Email" class="form-control" placeholder="Username">
+                    <label for="inputUid">Email address</label>
                   </div>
-                  <div class="form-label-group">
-                    <input type="password" id="inputPassword" class="form-control" placeholder="Password">
+                  <div class="form-label-group form-group">
+                    <input type="password" id="inputPassword" formControlName="Password" class="form-control" placeholder="Password">
                     <label for="inputPassword">Password</label>
                   </div>
                   <div class="custom-control custom-checkbox mb-3">
                     <input type="checkbox" class="custom-control-input" id="customCheck1">
                     <!-- <label class="custom-control-label" for="customCheck1">Remember password</label> -->
                   </div>
-                  <a href="index.html" class="btn btn-lg btn-outline-primary btn-block btn-login text-uppercase font-weight-bold mb-2">Sign in</a>
+                  <button class="btn btn-lg btn-outline-primary btn-block btn-login text-uppercase font-weight-bold mb-2">Sign in</button>
                   <div class="text-center pt-3">
                     Don’t have an account?
                     <a class="font-weight-bold signup" (click)="signUp()">Sign Up</a>
                   </div>
-                  <!-- </form> -->
-                  <!-- <hr class="my-4">
-                  <p class="text-center">LOGIN WITH</p>
-                  <div class="row">
-                    <div class="col pr-2">
-                      <button class="btn pl-1 pr-1 btn-lg btn-google font-weight-normal text-white btn-block text-uppercase" type="submit">
-                        <i class="fab fa-google mr-2"></i> Google</button>
-                    </div>
-                    <div class="col pl-2">
-                      <button class="btn pl-1 pr-1 btn-lg btn-facebook font-weight-normal text-white btn-block text-uppercase" type="submit">
-                        <i class="fab fa-facebook-f mr-2"></i> Facebook</button>
-                    </div>
-                  </div> -->
                 </form>
               </div>
             </div>
