--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -182,11 +182,11 @@ img{
 .homepage-search-block {
     background-color: #eef0ef;
 }
-.homepage-search-form .form-control {
-    font-size: 15px;
-    height: 50px;
-    padding-right: 106px;
-}
+// .homepage-search-form .form-control {
+//     font-size: 15px;
+//     height: 50px;
+//     padding-right: 106px;
+// }
 .homepage-search-form .form-group {
     position: relative;
 }
@@ -384,11 +384,11 @@ img{
 .btn {
     border-radius: 2px;
 }
-.form-control {
-    font-size: 13px;
-    border-radius: 2px;
-    min-height: 38px;
-}
+// .form-control {
+//     font-size: 13px;
+//     border-radius: 2px;
+//     min-height: 38px;
+// }
 .card {
     border-radius: 2px;
 }
@@ -410,7 +410,7 @@ img{
     border-radius: 2px;
 }
 .input-group-sm>.custom-select,
-.input-group-sm>.form-control,
+// .input-group-sm>.form-control,
 .input-group-sm>.input-group-append>.btn,
 .input-group-sm>.input-group-append>.input-group-text,
 .input-group-sm>.input-group-prepend>.btn,
@@ -456,9 +456,9 @@ img{
     left: 12px;
     top: 13px;
 }
-.filters-search .form-control {
-    padding-left: 34px;
-}
+// .filters-search .form-control {
+//     padding-left: 34px;
+// }
 .custom-checkbox label.custom-control-label,
 .custom-radio label.custom-control-label {
     padding-top: 2px;
@@ -592,12 +592,12 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ff3008', end
     margin: 0 4px 0 0;
     padding: 3px 6px;
 }
-.explore-outlets-search .form-control {
-    border-radius: 2px !important;
-    font-size: 15px;
-    height: 50px;
-    padding: 5px 20px;
-}
+// .explore-outlets-search .form-control {
+//     border-radius: 2px !important;
+//     font-size: 15px;
+//     height: 50px;
+//     padding: 5px 20px;
+// }
 .explore-outlets-search .btn {
     color: #777777;
     font-size: 15px;
